--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>Challenge ONE - Encriptador de Texto</title>
-        <link rel="stylesheet" href="C:\Users\Mikae\OneDrive\Documentos\Sublime_ORACLE\Reto1\reset.css">
-        <link rel="stylesheet" href="C:\Users\Mikae\OneDrive\Documentos\Sublime_ORACLE\Reto1\Stylee.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="Stylee.css">
 
     </head>
 
@@ -20,7 +20,7 @@
         <!Configuramos el encabezado con titulos y logos!>
         <header class="encabezado">
 
-			<h1><img src="C:\Users\Mikae\OneDrive\Documentos\Sublime_ORACLE\Reto1\imagenes\Logo.png" alt="logo de alura"> </h1>
+			<h1><img src="imagenes\Logo.png" alt="logo de alura"> </h1>
 
         </header>
 
@@ -37,7 +37,7 @@
                 
                     <!las indicaciones!>
                     <div class="b-exclamacion">
-                        <img class="exclamación" src="C:\Users\Mikae\OneDrive\Documentos\Sublime_ORACLE\Reto1\imagenes\bi_exclamation-circle-fill.png" alt="signo de exclamación">
+                        <img class="exclamación" src="imagenes\bi_exclamation-circle-fill.png" alt="signo de exclamación">
                         <small class="condicion">Sólo texto en minúsculas y sin tildes.</small>
                     </div>
                 
@@ -57,7 +57,7 @@
                 <div class="mostrar">
                     <!configuramos el cuadro de texto!>
                     <div class="resultado">
-                        <img class="mensaje-no-encontrado" id="imagen-no-encontrado" src="C:\Users\Mikae\OneDrive\Documentos\Sublime_ORACLE\Reto1\imagenes\mensaje no encontrado.png" alt="Texto no encontrado">
+                        <img class="mensaje-no-encontrado" id="imagen-no-encontrado" src="imagenes\mensaje no encontrado.png" alt="Texto no encontrado">
                         <textarea id="cuadro-texto-2" class="cuadro-texto-2" cols="50" rows="25" id="mostrar-el-texto" placeholder="Ningún mensaje fue encontrado"></textarea>
                     </div>
 
@@ -78,7 +78,7 @@
         </footer>
 
         <!Importamos el archivo de java!>
-        <script src="C:\Users\Mikae\OneDrive\Documentos\Sublime_ORACLE\Reto1\aplicación.js"></script>
+        <script src="aplicación.js"></script>
 
     </body>
 
