--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width">
         <title>Challenge ONE - Encriptador de Texto</title>
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="Stylee.css">
+        <link rel="stylesheet" href="stylee.css">
 
     </head>
 
